[package]
name = "bdk-esplora-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bdk_file_store = { git = "https://github.com/bitcoindevkit/bdk", rev = "f95506ba6a4a92e977ad228114683164c4ca1222" }
# bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "c20a4da9fc902a062eb217b39e37a32d9e64a148", default-features = false, features = [
#   "compiler",
#   "dev-getrandom-wasm",
#   "std",
# ] }
# bdk_esplora = { git = "https://github.com/bitcoindevkit/bdk", rev = "c20a4da9fc902a062eb217b39e37a32d9e64a148", default-features = false, features = [
#   "async-https",
#   "std",
# ] }

bdk_esplora = { git = "https://github.com/bitcoindevkit/bdk", rev = "4ee11aae12f5f5b636008195998833268d5edc66", features = [
  "async-https",
] }
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "4ee11aae12f5f5b636008195998833268d5edc66" }
once_cell = "1.18"
serde = "=1.0.171"
tokio = { version = "1", features = ["full"] }
